--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ plugins {
 
 version = project.mod_version
 group = 'com.tom5454.jzlib-gwt' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
-archivesBaseName = 'JZlib'
+archivesBaseName = 'JZlib-GWT'
 
 sourceCompatibility = 8
 targetCompatibility = 8
@@ -19,13 +19,12 @@ dependencies {
 	implementation "com.google.elemental2:elemental2-dom:1.1.0"
 }
 
-task sourcesJar(type: Jar, dependsOn: classes) {
-    classifier = 'sources'
-    from sourceSets.main.allSource
-}
-
-artifacts {
-    archives sourcesJar
+sourceSets {
+    superSource {
+        java {
+            srcDir 'src/super/java'
+        }
+    }
 }
 
 // Example for how to get properties into the manifest for reading by the runtime..
@@ -41,6 +40,15 @@ jar {
             "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
         ])
     }
+    
+    // Include all main sources (compiled and source files)
+    from sourceSets.main.allJava
+
+    // Include super-source .java files as resources in com/tom/javazip/emul
+    from(sourceSets.superSource.allJava) {
+        include '**/*.java'
+        into 'com/tom/javazip/emul'
+    }
 }
 
 // configure the maven publication
@@ -50,9 +58,6 @@ publishing {
 			// add all the jars that should be included when publishing to maven
 			artifact(jar) {
 				builtBy jar
-			}
-			artifact(sourcesJar) {
-				builtBy sourcesJar
 			}
 		}
 	}
